# safe-chat

./: CMakeLists.txt  LICENSE  README.md  bytes.c  bytes.h  test.py
debug/: print_debug.c  print_debug.h
imports/: base64.c  base64.h
include/: bytes.h  cbc.h  cypher.h  gf_operations.h  inverse.h  key_schedule.h
python_interface/: aesmodule.c  setup.py
src/: bytes.c  cbc.c  cypher.c  gf_operations.c  inverse.c  key_schedule.c  main.c
